# wellbeing

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  wellbeing-export-2026-01-26-to-2026-02-25.csv
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
e2e/: accessibility.spec.ts  app-limits.spec.ts  dashboard.spec.ts  goals.spec.ts  history.spec.ts  navigation.spec.ts  settings.spec.ts
pkg/arch/: PKGBUILD  PKGBUILD-git
pkg/linux/arch/: PKGBUILD  PKGBUILD-git  digital-wellbeing.desktop  wellbeing.desktop
scripts/: release.sh
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_scanner.rs  autostart.rs  break_reminder.rs  commands.rs  database.rs  error.rs  focus_mode.rs  goals.rs  lib.rs  limit_popup.rs  main.rs  migrations.rs  notification_settings.rs  notifications.rs  theme.rs  tracker.rs  tray.rs  window_tracker.rs
src/components/: AppIcon.tsx  AppLimits.tsx  Dashboard.tsx  FocusMode.tsx  Goals.tsx  History.tsx  LimitReached.tsx  LottieAnimation.tsx  MobileHeader.tsx  Settings.tsx  Sidebar.tsx  UpdateModal.tsx
src/components/dashboard/: AppBreakdownPie.tsx  AppUsageList.test.tsx  (+7 more)
src/contexts/: UpdaterContext.ts
src/hooks/: useDarkMode.test.ts  useDarkMode.ts  useKeyboardNav.ts  useTheme.ts  useUndo.ts  useUpdater.ts
src/lib/: utils.test.ts
src/services/: api.ts
src/store/: useAppStore.ts
src/test/: setup.ts
src/types/: index.ts
src/utils/: formatters.test.ts  formatters.ts
(+15 files in other folders)
